# TrabCuda

./: .gitignore  CMakeLists.txt  GaussSeidel.hpp  Matrix.hpp  heatmap.py  main.cpp  main.cu
include/: GaussSeidel.hpp  Matrix.hpp  cudaUtils.h  cudaUtils.hpp  equation.hpp
